--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,10 @@ input {
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
+  border: none;
+  background-color: inherit;
+  padding: 0;
+  cursor: pointer;
 }
 
 ul,
@@ -50,4 +54,8 @@ ol {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   white-space: nowrap;
+}
+
+button:focus {
+  outline: none;
 }
