--- a/styles/style.css
+++ b/styles/style.css
@@ -13,4 +13,362 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-family: var(--base-font, sans-serif);
+  font-variation-settings: "wght" var(--base-font-weight);
+  font-size: var(--base-font-size);
+  inline-size: clamp(375px, 100vw, 700px);
+  margin: auto;
+  background: linear-gradient(180deg, #E7E7E7 0%, #1A1A1A 100%);
+  background-image: var(--background-pattern);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+@supports (font-variation-settings: normal) {
+  .page {
+      font-family: var(--base-font, sans-serif);
+  }
+} 
+
+.header {
+  background-color: var(--base-background);
+  font-family: var(--accent-font, sans-serif);
+  font-weight: var(--base-font-weight);
+  text-transform: uppercase;
+  text-align: center;
+  block-size: clamp(327px, 40vh, 368px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-block: 100px;
+  border: var(--border);
+  line-height: 100%;
+}
+
+.header__title {
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__under-title {
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  display: inline-block;
+  transform: translateY(20px);
+}
+
+.card {
+  background-color: var(--base-background);
+  border: var(--border);
+  margin-block-end: 50px;
+}
+
+.card__title {
+  font-variation-settings: "wght" var(--heading-font-weight);
+  font-size: var(--base-font-size);
+  padding: 4px 10px;
+  border-block-end: var(--border);
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__image-label {
+  position: absolute;
+  top: 25px;
+  right: 11px;
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  mix-blend-mode: hard-light;
+  opacity: 0.5;
+  -webkit-text-stroke: 1px #fff;
+  text-shadow: 0 0 1px #fff;
+  z-index: 1;
+}
+
+@supports ((text-stroke: 1px #fff) or (-webkit-text-stroke: 1px #fff;)) {
+  .card__image-label {
+    -webkit-text-stroke: 1px #fff;
+    text-stroke: 1px #fff;
+    text-shadow: none;
+  }
+}
+
+.card__image {
+  display: block;
+  inline-size: 100%;
+  aspect-ratio: 1/1;
+}
+
+.filter-2 {
+  filter: brightness(80%);
+}
+
+.filter-3 {
+  filter: hue-rotate(0.1turn);
+}
+
+.filter-4 {
+  filter: saturate(110%);
+}
+
+.filter-5 {
+  filter: sepia(0.5);
+}
+
+.filter-6 {
+  filter: grayscale(100%);
+}
+
+.filter-7 {
+  filter: blur(2px);
+}
+
+.filter-8 {
+  filter: invert(20%);
+}
+
+.card__description {
+  padding: 25px;
+  line-height: 21px;
+  display: flex;
+  flex-direction: column;
+  border-block-start: var(--border);
+}
+
+.card__description .card__description-text {
+  padding-inline-end: 10px;
+}
+
+.card__description .card__description-text:not(:last-of-type) {
+  margin-block-end: 27px;
+}
+
+.card__description .card__description-text:last-of-type {
+  margin-block-end: 25px;
+}
+
+.card__button-container {
+  align-self: end;
+  inline-size: 172px;
+  block-size: 38px;
+  display: flex;
+  column-gap: 6px;
+}
+
+.card__icon-button {
+  inline-size: 39px;
+  display: flex;
+  align-items: center;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease;
+}
+
+.card__like-button {
+  inline-size: 130px;
+  block-size: 100%;
+  border: var(--border);
+  position: relative;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s  0.03s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour);
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour);
+}
+
+.card__icon-button:active {
+  outline: none;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-color);
+}
+
+.like-icon:active .core {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-color);
+}
+
+.contour {
+  fill: var(--heart-contour);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-color);
+  transition: fill 0.1s linear;
+}
+
+@keyframes scalation {
+  from {
+    scale: 1;
+  }
+
+  to {
+    scale: 1.25;
+  }
+}
+
+.like-icon.is-liked .heart {
+  animation: scalation 0.3s 0.1s ease-in;
+  transform-origin: 17.5px 17px;
+}
+
+@keyframes flash {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.like-icon.is-liked .sparks {
+  animation: flash 0.3s 0.3s ease-in;
+}
+
+.button__text,
+.dialog__button {
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+}
+
+.footer {
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  padding-block-end: 100px;
+}
+
+.footer__button {
+  inline-size: clamp(306px, 80%, 335px);
+  border: var(--border);
+  background-color: var(--base-background);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 13px 0;
+  gap: 8px;
+  color: #000;
+  position: relative;
+}
+
+@media (width >= 768px) {
+  .footer__button-container {
+    flex-direction: row;
+  }
+}
+
+.button__icon {
+  padding: 0;
+  block-size: 28px;
+  inline-size: 28px;
+}
+
+.dialog[open] {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  column-gap: 20px;
+  row-gap: 30px;
+  padding: 30px;
+  max-inline-size: 353px;
+}
+
+.dialog::backdrop {
+  background-color: rgba(0 0 0 / .75);
+}
+
+.dialog__icon {
+  inline-size: 39px;
+  block-size: 39px;
+  align-self: center;
+  position: relative;
+}
+
+.dialog__icon use {
+  transform: scale(1.4);
+}
+
+.dialog__text {
+  font-family: var(--accent-font, sans-serif);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog__button {
+  grid-column: 1 / -1;
+  border: var(--border);
+  padding: 12.5px;
+}
+
+@keyframes move-shadow {
+  from {
+    box-shadow: 0 0 0 #000;
+  }
+  
+  to {
+    box-shadow: 2px 2px 0 #000;
+  }
+}
+
+.card__like-button:focus-visible,
+.footer__button:focus-visible {
+  animation: move-shadow 0.3s linear forwards;
+}
+
+.card__like-button::after,
+.footer__button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: #000;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.card__like-button:hover::after,
+.footer__button:hover::after {
+  transform: scaleX(1);
+}
+
+.button__text,
+.button__icon {
+  mix-blend-mode: difference;
+  color: #fff;
+  position: relative;
+  z-index: 1;
+}
+
+.card__icon-button:focus-visible {
+  border-color: #000;
 }
