--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,17 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --base-font: Inter;
+  --accent-font: PressStart2P;
+  --base-font-weight: 400;
+  --heading-font-weight: 700;
+  --base-background: #fff;
+  --border: solid 2px #000;
+  --base-font-size: 18px;
+  --background-pattern: 
+    repeating-linear-gradient(#d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px), 
+    repeating-linear-gradient(-90deg, #d3d3d3 0, #d3d3d3 2px, transparent 2px, transparent 4px),
+    linear-gradient(#e7e7e7, #1a1a1a);
+  --heart-contour: #000;
+  --heart-color: #ff0000;
+}
