--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,112 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+@keyframes scalation {
+    from {
+      scale: 1;
+    }
+  
+    to {
+      scale: 1.25;
+    }
+  }
+
+@keyframes flash {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes move-shadow {
+  from {
+    box-shadow: 0 0 0 #000;
+  }
+  
+  to {
+    box-shadow: 2px 2px 0 #000;
+  }
+}
+
+.like-icon.is-liked .heart {
+  animation: scalation 0.3s 0.1s ease-in;
+  transform-origin: 17.5px 17px;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s  0.03s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--heart-contour);
+}
+
+.like-icon:hover .core {
+  fill: var(--heart-contour);
+}
+
+.card__icon-button:active {
+  outline: none;
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-color);
+}
+
+.like-icon:active .core {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-color);
+}
+
+.contour {
+  fill: var(--heart-contour);
+  transition: fill 0.3s 0.06s linear;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-color);
+  transition: fill 0.1s linear;
+}
+
+.like-icon.is-liked .sparks {
+  animation: flash 0.3s 0.3s ease-in;
+}
+
+.action-button:focus-visible {
+  animation: move-shadow 0.3s linear forwards;
+}
+
+.action-button::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: #000;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.action-button:hover::after {
+  transform: scaleX(1);
+}
+
+.card__icon-button:focus-visible {
+  border-color: #000;
+}
